--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,11 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #f4f4f4;
+  background-color: white;
 }
 
 header {
-  background-color: #333;
+  background-color: #88E788;
   color: white;
   text-align: center;
   padding: 20px;
@@ -19,13 +19,13 @@ header img {
 section {
   padding: 20px;
   margin: 20px;
-  background-color: white;
+  background-color: #d3d3d3;
   border-radius: 8px;
 }
 
 footer {
   text-align: center;
   padding: 10px;
-  background-color: #333;
+  background-color: #88E788;
   color: white;
 }
