--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 body {
-  font-family: Arial, sans-serif;
+  font-family: Garamond, serif;
   margin: 0;
   padding: 0;
-  background-color: white;
+  background-color: #d3d3d3;
 }
 
 header {
-  background-color: #88E788;
+  background-color: #00072D;
   color: white;
   text-align: center;
   padding: 20px;
@@ -19,13 +19,13 @@ header img {
 section {
   padding: 20px;
   margin: 20px;
-  background-color: #d3d3d3;
+  background-color: white;
   border-radius: 8px;
 }
 
 footer {
   text-align: center;
   padding: 10px;
-  background-color: #88E788;
+  background-color: #00072D;
   color: white;
 }
