--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,26 @@
 body {
-  font-family: Garamond, serif;
+  font-family: Abel;
   margin: 0;
   padding: 0;
   background-color: #d3d3d3;
+  font-size: 22px;
+}
+
+h1 { 
+  font-family: Bricolage Grotesque;
+  font-size: 25px;
+  text-align: center;
+  color: darkslategrey;
+  
 }
 
 header {
-  background-color: white;
-  color: white;
+  font-family: Edu NSW ACT Foundation ;
+  background-color: darkslategrey;
+  color: #F5F5F4;
   text-align: center;
   padding: 20px;
+  font-size: 40px;
 }
 
 header img {
@@ -26,6 +37,7 @@ section {
 footer {
   text-align: center;
   padding: 10px;
-  background-color: white;
+  background-color: azure;
   color: white;
+  font-size: 20px;
 }
