--- a/css/style.css
+++ b/css/style.css
@@ -1,45 +1,67 @@
 body {
-  font-family: Abel;
+  font-family: "Times New Roman", Times, serif;
   margin: 0;
   padding: 0;
   background-color: lightgrey;
-  font-size: 21px;
+  font-size: 18px;
 }
+<!-- Noto Serif (Georgia-ish), Nunito Sans (Arial-ish), Abel (Modern) "Times New Roman", Times, serif;-->
 
 h1 { 
-  font-family: Noto Serif;
-  font-size: 25px;
+  font-size: 1px;
   text-align: center;
   color: darkslategrey;
   line-height: 1.0
+font-family:Abel;
+}
 
+a { 
+color:lightblue;
+font-size:19px;
+line-height:1.3;
+text-align:left;
+font-family: Abel;
+font-size: 18px;
 }
 
 h2 { 
-  font-family: Noto Serif;
-  font-size: 20px;
+  font-family: Abel;
+  font-size: 23px;
+  text-align: center;
+  color: #1F456E;
+  line-height: 1.0
+text-align: center;
+
 }
 
 
 h4 {
-
-  font-family: Noto Serif;
-  font-size: 21px;
-  text-align: center;
+  font-family: Abel;
+  font-size: 16px;
+  text-align: left;
   color: darkslategrey;
   line-height: 1.0
+text-align: center;
+
+p.darkbackground {
+  color:white;
+  font-family:Abel;
+  font-size: 100px;
+  margin:0;
+  padding:0;
+}
 
 
 }
 
 header {
-  font-family: Nunito Sans;
-  background-color: darkslategrey;
+  font-family: Abel;
+  background-color: #151E3D;
   color: #F5F5F4;
-  text-align: center;
-  padding: 4px;
-  font-size: 17px;
-  height: 200px;
+  text-align: left;
+  padding: 1px;
+  font-size: 18px;
+  height: 300px;
  line-height: 0.5;
 margin: 10px;
 }
@@ -81,4 +103,4 @@ footer {
   clear: both;
 }
 
-p.boxedlarge {outline-style: none; background-color: #DBECF3; padding: 10px; margin: 5px; border: 1px solid #3B5052; width: 120px; border-radius: 5px; font-size:18px; display:inline;  line-height: 3; letter-spacing:1.7px, text-weight: bold}
+p.boxedlarge {outline-style: none; background-color: #151E3D; padding: 6px; margin: 4px; border: 1px solid white; width: 120px; border-radius: 5px; font-size:15px; display:inline;  line-height: 3; letter-spacing:1.7px, text-weight: bold; color:white; font-family:Abel; text-alight:right}
