--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Times New Roman", Times, serif;
+  font-family: Abel;
   margin: 0;
   padding: 0;
   background-color: lightgrey;
